--- a/greenpost/src/app/components/workspaces/logistics-transactions/section/section.component.html
+++ b/greenpost/src/app/components/workspaces/logistics-transactions/section/section.component.html
@@ -25,28 +25,22 @@
         <mat-card-title>My orders</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-        <table mat-table [dataSource]="dataSource">
+        <table mat-table [dataSource]="dataSource" fxFlex>
 
             <!-- Checkbox Column -->
             <ng-container matColumnDef="select">
-                <th mat-header-cell *matHeaderCellDef>
+                <mat-header-cell *matHeaderCellDef>
                     <mat-checkbox (change)="$event ? masterToggle() : null"
                                   [checked]="selection.hasValue() && isAllSelected()"
                                   [indeterminate]="selection.hasValue() && !isAllSelected()">
                     </mat-checkbox>
-                </th>
-                <td mat-cell *matCellDef="let row">
+                </mat-header-cell>
+                <mat-cell *matCellDef="let row">
                     <mat-checkbox (click)="$event.stopPropagation()"
                                   (change)="$event ? selection.toggle(row) : null"
                                   [checked]="selection.isSelected(row)">
                     </mat-checkbox>
-                </td>
-            </ng-container>
-
-            <!-- id Column -->
-            <ng-container matColumnDef="id">
-                <mat-header-cell *matHeaderCellDef>id </mat-header-cell>
-                <mat-cell *matCellDef="let element"> {{element.id}} </mat-cell>
+                </mat-cell>
             </ng-container>
 
             <!-- from Column -->
