--- a/greenpost/src/app/components/workspaces/my-users/section/section.component.html
+++ b/greenpost/src/app/components/workspaces/my-users/section/section.component.html
@@ -40,4 +40,4 @@
   </mat-table>
   <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[10, 20, 100]"></mat-paginator>
 </mat-card>
-<button class="floating-button" color="accent" mat-fab matTooltip="Добавить нового пользователя" matTooltipPosition="left"><mat-icon>person_add</mat-icon></button>
+<button class="floating-button" color="accent" (click)="openCreateDialog()" mat-fab matTooltip="Добавить нового пользователя" matTooltipPosition="left"><mat-icon>person_add</mat-icon></button>
