--- a/greenpost/src/app/components/workspaces/logistics-transactions/section/section.component.html
+++ b/greenpost/src/app/components/workspaces/logistics-transactions/section/section.component.html
@@ -1,28 +1,27 @@
 <mat-card>
     <mat-card-header>
-        <mat-card-title>Filters</mat-card-title>
+        <mat-card-title>Фильтр</mat-card-title>
     </mat-card-header>
     <mat-card-content>
         <form class="example-form">
             <mat-form-field class="example" fxFlex="1 1 auto">
-                <input matInput placeholder="Courier" value="Vasya">
+                <input matInput placeholder="Курьер" value="Вася">
             </mat-form-field>
             <mat-form-field class="example" fxFlex="1 1 auto">
-                <input matInput placeholder="№ of Order" value="A123">
+                <input matInput placeholder="№ Заказа" value="A123">
             </mat-form-field>
             <mat-form-field class="example" fxFlex="1 1 auto">
-                <input matInput placeholder="Client" value="Нова Пошта">
+                <input matInput placeholder="Клиент" value="Нова Пошта">
             </mat-form-field>
             <mat-form-field class="example" fxFlex="1 1 auto">
-                <input matInput placeholder="Status" value="Done">
+                <input matInput placeholder="Статус" value="сделан">
             </mat-form-field>
         </form>
-        <button mat-raised-button color="primary">Filter</button>
     </mat-card-content>
 </mat-card>
 <mat-card>
     <mat-card-header>
-        <mat-card-title>My orders</mat-card-title>
+        <mat-card-title>Мои заказы</mat-card-title>
     </mat-card-header>
     <mat-card-content>
         <table mat-table [dataSource]="dataSource" fxFlex>
@@ -45,81 +44,45 @@
 
             <!-- from Column -->
             <ng-container matColumnDef="from">
-                <mat-header-cell *matHeaderCellDef> from </mat-header-cell>
+                <mat-header-cell *matHeaderCellDef> Адрес отправителя </mat-header-cell>
                 <mat-cell mat-cell *matCellDef="let element"> {{element.from}} </mat-cell>
             </ng-container>
 
             <!-- to Column -->
             <ng-container matColumnDef="to">
-                <mat-header-cell *matHeaderCellDef> to </mat-header-cell>
+                <mat-header-cell *matHeaderCellDef> Адрес получателя </mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.to}} </mat-cell>
             </ng-container>
 
             <!-- reciever Column -->
             <ng-container matColumnDef="reciever">
-                <mat-header-cell *matHeaderCellDef> reciever </mat-header-cell>
+                <mat-header-cell *matHeaderCellDef> Получатель </mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.reciever}} </mat-cell>
             </ng-container>
             <!-- status Column -->
             <ng-container matColumnDef="status">
-                <mat-header-cell *matHeaderCellDef> status </mat-header-cell>
+                <mat-header-cell *matHeaderCellDef> Статус </mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.status}} </mat-cell>
+            </ng-container>
+            <!-- price Column -->
+            <ng-container matColumnDef="price">
+                <mat-header-cell *matHeaderCellDef> Цена </mat-header-cell>
+                <mat-cell *matCellDef="let element"> {{element.price}} </mat-cell>
+            </ng-container>
+            <!-- typeOfOrder Column -->
+            <ng-container matColumnDef="typeOfOrder">
+                <mat-header-cell *matHeaderCellDef> Тип доставки </mat-header-cell>
+                <mat-cell *matCellDef="let element"> {{element.typeOfOrder}} </mat-cell>
             </ng-container>
 
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
             <mat-row *matRowDef="let row; columns: displayedColumns;"
-                (click)="selection.toggle(row)">
+                     (click)="selection.toggle(row)">
             </mat-row>
         </table>
-
-        <!--<table mat-table [dataSource]="dataSource" multiTemplateDataRows fxFlex>
-            &lt;!&ndash; Checkbox Column &ndash;&gt;
-            <ng-container matColumnDef="select">
-                <mat-header-cell *matHeaderCellDef>RR</mat-header-cell>
-                    <mat-checkbox (change)="$event ? masterToggle() : null"
-                                  [checked]="selection.hasValue() && isAllSelected()"
-                                  [indeterminate]="selection.hasValue() && !isAllSelected()">
-                    </mat-checkbox>
-
-                <mat-cell *matCellDef="let row"></mat-cell>
-                    <mat-checkbox (click)="$event.stopPropagation()"
-                                  (change)="$event ? selection.toggle(row) : null"
-                                  [checked]="selection.isSelected(row)">
-                    </mat-checkbox>
-
-            </ng-container>
-
-            <ng-container matColumnDef="id">
-                <mat-header-cell *matHeaderCellDef>#</mat-header-cell>
-                <mat-cell *matCellDef="let element"> {{element.id}}</mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="reciever">
-                <mat-header-cell *matHeaderCellDef>Reciever</mat-header-cell>
-                <mat-cell *matCellDef="let element"> {{element.reciever}}</mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="from">
-                <mat-header-cell *matHeaderCellDef>From</mat-header-cell>
-                <mat-cell *matCellDef="let element"> {{element.from}}</mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="to">
-                <mat-header-cell *matHeaderCellDef>To</mat-header-cell>
-                <mat-cell *matCellDef="let element"> {{element.to}}</mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="status">
-                <mat-header-cell *matHeaderCellDef>Status</mat-header-cell>
-                <mat-cell *matCellDef="let element"> {{element.status}}</mat-cell>
-            </ng-container>
-
-            <mat-header-row *matHeaderRowDef="['id','from','to','reciever','status']"></mat-header-row>
-            <mat-row class="clickable-row" *matRowDef="let element; columns: ['id','from','to','reciever','status'];" (click)="openCard(element.id)"></mat-row>
-        </table>-->
-
     </mat-card-content>
 </mat-card>
 
 <button mat-fab color="warn" class="floating-button" matTooltip="Create new order" matTooltipPosition="left"><mat-icon>add</mat-icon></button>
 <button mat-fab color="primary" class="floating-button" matTooltip="Load from file" matTooltipPosition="left" [style.bottom]="'110px'" (click)="openBottomSheet()"><mat-icon>cloud_upload</mat-icon></button>
+<button mat-fab color="primary" class="floating-button" matTooltip="Копировать заказ" matTooltipPosition="left" [style.bottom]="'175px'"><mat-icon>library_add</mat-icon></button>
