--- a/greenpost/src/app/components/workspaces/my-orders/section/section.component.html
+++ b/greenpost/src/app/components/workspaces/my-orders/section/section.component.html
@@ -1,44 +1,83 @@
 <mat-card>
     <mat-card-header>
-        <mat-card-title>Filters</mat-card-title>
+        <mat-card-title>Фильтр</mat-card-title>
     </mat-card-header>
+    <mat-card-content>
+        <form class="example-form">
+            <mat-form-field class="example" fxFlex="1 1 auto">
+                <input matInput placeholder="ТТН" value="123456">
+            </mat-form-field>
+            <mat-form-field class="example" fxFlex="1 1 auto">
+                <input matInput placeholder="Адрес" value="Маяковского 25">
+            </mat-form-field>
+
+            <mat-form-field class="example-chip-list">
+                <mat-chip-list #chipList>
+                    <mat-chip *ngFor="let phone of phones" [selectable]="selectable"
+                              [removable]="removable" (removed)="remove(phone)">
+                        {{phone.name}}
+                        <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                    </mat-chip>
+                    <input placeholder="Добавить номер телефона..."
+                           [matChipInputFor]="chipList"
+                           [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                           [matChipInputAddOnBlur]="addOnBlur"
+                           (matChipInputTokenEnd)="add($event)">
+                </mat-chip-list>
+            </mat-form-field>
+            <mat-form-field class="example" fxFlex="1 1 auto">
+                <input matInput placeholder="Получатель" value="Ткачук Віталій">
+            </mat-form-field>
+        </form>
+    </mat-card-content>
 </mat-card>
 <mat-card>
     <mat-card-header>
-        <mat-card-title>My orders</mat-card-title>
+        <mat-card-title>Мои заказы</mat-card-title>
     </mat-card-header>
     <mat-card-content>
         <table mat-table [dataSource]="dataSource" multiTemplateDataRows fxFlex>
             <ng-container matColumnDef="id">
-                <mat-header-cell *matHeaderCellDef>#</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef>№</mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.id}}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="reciever">
-                <mat-header-cell *matHeaderCellDef>Reciever</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef>Получатель</mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.reciever}}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="from">
-                <mat-header-cell *matHeaderCellDef>From</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef>Адрес отправителя</mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.from}}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="to">
-                <mat-header-cell *matHeaderCellDef>To</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef>Адрес получателя</mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.to}}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="status">
-                <mat-header-cell *matHeaderCellDef>Status</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef>Статус</mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.status}}</mat-cell>
             </ng-container>
 
-            <mat-header-row *matHeaderRowDef="['id','from','to','reciever','status']"></mat-header-row>
-            <mat-row class="clickable-row" *matRowDef="let element; columns: ['id','from','to','reciever','status'];" (click)="openCard(element.id)"></mat-row>
+            <ng-container matColumnDef="price">
+                <mat-header-cell *matHeaderCellDef> Цена </mat-header-cell>
+                <mat-cell *matCellDef="let element"> {{element.price}} </mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="typeOfOrder">
+                <mat-header-cell *matHeaderCellDef> Тип доставки </mat-header-cell>
+                <mat-cell *matCellDef="let element"> {{element.typeOfOrder}} </mat-cell>
+            </ng-container>
+
+            <mat-header-row *matHeaderRowDef="['id','from','to','reciever','status', 'price', 'typeOfOrder']"></mat-header-row>
+            <mat-row class="clickable-row" *matRowDef="let element; columns: ['id','from','to','reciever','status', 'price', 'typeOfOrder'];" (click)="openCard(element.id)"></mat-row>
         </table>
     </mat-card-content>
 </mat-card>
 
 <button mat-fab color="warn" class="floating-button" matTooltip="Create new order" matTooltipPosition="left"><mat-icon>add</mat-icon></button>
 <button mat-fab color="primary" class="floating-button" matTooltip="Load from file" matTooltipPosition="left" [style.bottom]="'110px'" (click)="openBottomSheet()"><mat-icon>cloud_upload</mat-icon></button>
+<button mat-fab color="primary" class="floating-button" matTooltip="Копировать заказ" matTooltipPosition="left" [style.bottom]="'175px'"><mat-icon>library_add</mat-icon></button>
